# study_buddy_cli

./: .env  .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs  pg_client.rs  postgres_client.rs
src/models/: auth.rs  mod.rs  task.rs
src/storage/: mod.rs  user_storage.rs
