[package]
name = "study_buddy_cli"
version = "0.1.0"
edition = "2021"
chrono = "0.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
djangohashers = "1.7.2"
dotenv = "0.15.0"
lazy_static = "1.4.0"
postgres = "0.19.7"
sqlx = { version = "0.7", features = ["runtime-async-std", "postgres", "macros", "time", "chrono"]}
tokio = { version = "1", features = ["full"] }
